--- a/Codigos/Análise de BCI/Imagens e Tabelas.ipynb
+++ b/Codigos/Análise de BCI/Imagens e Tabelas.ipynb
@@ -33,18 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,44 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table.to_csv(\"stats.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory Models loaded successfully.\n",
-      "Directory Models/densenet161 loaded successfully.\n",
-      "Directory Models/densenet169 loaded successfully.\n",
-      "Directory Models/densenet201 loaded successfully.\n",
-      "Directory Models/googlenet loaded successfully.\n",
-      "Directory Models/mnasnet0_5 loaded successfully.\n",
-      "Directory Models/mnasnet1_0 loaded successfully.\n",
-      "Directory Models/mobilenet loaded successfully.\n",
-      "Directory Models/resnet101 loaded successfully.\n",
-      "Directory Models/resnet101_32x8d loaded successfully.\n",
-      "Directory Models/resnet152 loaded successfully.\n",
-      "Directory Models/resnet18 loaded successfully.\n",
-      "Directory Models/resnet34 loaded successfully.\n",
-      "Directory Models/resnet50 loaded successfully.\n",
-      "Directory Models/resnext50_32x4d loaded successfully.\n",
-      "Directory Models/shufflenet_v2_x0_5 loaded successfully.\n",
-      "Directory Models/vgg11 loaded successfully.\n",
-      "Directory Models/vgg13 loaded successfully.\n",
-      "Directory Models/vgg16 loaded successfully.\n",
-      "Directory Models/vgg19 loaded successfully.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -121,196 +77,135 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>resnet34</td>\n",
-       "      <td>0.490385</td>\n",
-       "      <td>2.13182</td>\n",
-       "      <td>0.960526</td>\n",
-       "      <td>0.183534</td>\n",
+       "      <td>densenet161</td>\n",
+       "      <td>0.827839</td>\n",
+       "      <td>0.633519</td>\n",
+       "      <td>0.993132</td>\n",
+       "      <td>0.0366975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>resnet101_32x8d</td>\n",
-       "      <td>0.471154</td>\n",
-       "      <td>2.03539</td>\n",
-       "      <td>0.95933</td>\n",
-       "      <td>0.157079</td>\n",
+       "      <td>resnet152</td>\n",
+       "      <td>0.826007</td>\n",
+       "      <td>0.690557</td>\n",
+       "      <td>0.995879</td>\n",
+       "      <td>0.0258854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>densenet169</td>\n",
-       "      <td>0.466346</td>\n",
-       "      <td>1.9464</td>\n",
-       "      <td>0.899522</td>\n",
-       "      <td>0.387298</td>\n",
+       "      <td>resnet34</td>\n",
+       "      <td>0.820513</td>\n",
+       "      <td>0.715833</td>\n",
+       "      <td>0.992674</td>\n",
+       "      <td>0.0308838</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>resnext50_32x4d</td>\n",
-       "      <td>0.461538</td>\n",
-       "      <td>1.85677</td>\n",
-       "      <td>0.777512</td>\n",
-       "      <td>0.643034</td>\n",
+       "      <td>densenet121</td>\n",
+       "      <td>0.804029</td>\n",
+       "      <td>0.717805</td>\n",
+       "      <td>0.986264</td>\n",
+       "      <td>0.0579804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>googlenet</td>\n",
-       "      <td>0.456731</td>\n",
-       "      <td>1.594</td>\n",
-       "      <td>0.771531</td>\n",
-       "      <td>0.691261</td>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>0.800366</td>\n",
+       "      <td>0.810565</td>\n",
+       "      <td>0.994963</td>\n",
+       "      <td>0.031701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>resnet18</td>\n",
-       "      <td>0.456731</td>\n",
-       "      <td>2.18356</td>\n",
-       "      <td>0.931818</td>\n",
-       "      <td>0.213244</td>\n",
+       "      <td>googlenet</td>\n",
+       "      <td>0.791209</td>\n",
+       "      <td>0.826886</td>\n",
+       "      <td>0.989927</td>\n",
+       "      <td>0.0526342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>mobilenet</td>\n",
-       "      <td>0.451923</td>\n",
-       "      <td>1.84646</td>\n",
-       "      <td>0.892344</td>\n",
-       "      <td>0.375436</td>\n",
+       "      <td>resnet101</td>\n",
+       "      <td>0.791209</td>\n",
+       "      <td>0.744109</td>\n",
+       "      <td>0.992674</td>\n",
+       "      <td>0.0240675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>densenet161</td>\n",
-       "      <td>0.447115</td>\n",
-       "      <td>1.95333</td>\n",
-       "      <td>0.90311</td>\n",
-       "      <td>0.339584</td>\n",
+       "      <td>resnet50</td>\n",
+       "      <td>0.771062</td>\n",
+       "      <td>0.811559</td>\n",
+       "      <td>0.962454</td>\n",
+       "      <td>0.120791</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>resnet50</td>\n",
-       "      <td>0.447115</td>\n",
-       "      <td>2.08339</td>\n",
-       "      <td>0.913876</td>\n",
-       "      <td>0.295867</td>\n",
+       "      <td>vgg11</td>\n",
+       "      <td>0.705128</td>\n",
+       "      <td>0.97788</td>\n",
+       "      <td>0.919414</td>\n",
+       "      <td>0.293853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>resnet152</td>\n",
-       "      <td>0.447115</td>\n",
-       "      <td>2.03128</td>\n",
-       "      <td>0.91866</td>\n",
-       "      <td>0.287049</td>\n",
+       "      <td>vgg13</td>\n",
+       "      <td>0.694139</td>\n",
+       "      <td>0.998538</td>\n",
+       "      <td>0.93544</td>\n",
+       "      <td>0.254939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>resnet101</td>\n",
-       "      <td>0.442308</td>\n",
-       "      <td>2.14986</td>\n",
-       "      <td>0.92823</td>\n",
-       "      <td>0.250579</td>\n",
+       "      <td>vgg16</td>\n",
+       "      <td>0.684982</td>\n",
+       "      <td>1.17172</td>\n",
+       "      <td>0.912088</td>\n",
+       "      <td>0.306161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>densenet201</td>\n",
-       "      <td>0.418269</td>\n",
-       "      <td>2.19347</td>\n",
-       "      <td>0.912679</td>\n",
-       "      <td>0.301306</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>vgg16</td>\n",
-       "      <td>0.389423</td>\n",
-       "      <td>1.45822</td>\n",
-       "      <td>0.533493</td>\n",
-       "      <td>1.14147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>vgg13</td>\n",
-       "      <td>0.350962</td>\n",
-       "      <td>1.48536</td>\n",
-       "      <td>0.405502</td>\n",
-       "      <td>1.38342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>vgg11</td>\n",
-       "      <td>0.341346</td>\n",
-       "      <td>1.51324</td>\n",
-       "      <td>0.380383</td>\n",
-       "      <td>1.42172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>mnasnet1_0</td>\n",
-       "      <td>0.264423</td>\n",
-       "      <td>1.60785</td>\n",
-       "      <td>0.2811</td>\n",
-       "      <td>1.57103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>mnasnet0_5</td>\n",
-       "      <td>0.254808</td>\n",
-       "      <td>1.60047</td>\n",
-       "      <td>0.266746</td>\n",
-       "      <td>1.57608</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>shufflenet_v2_x0_5</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>1.5914</td>\n",
-       "      <td>0.239234</td>\n",
-       "      <td>1.5938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>vgg19</td>\n",
-       "      <td>0.230769</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.220096</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>alexnet</td>\n",
+       "      <td>0.298535</td>\n",
+       "      <td>1.54797</td>\n",
+       "      <td>0.331044</td>\n",
+       "      <td>1.50295</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 model best val acc best val loss training acc training loss\n",
-       "0             resnet34     0.490385       2.13182     0.960526      0.183534\n",
-       "1      resnet101_32x8d     0.471154       2.03539      0.95933      0.157079\n",
-       "2          densenet169     0.466346        1.9464     0.899522      0.387298\n",
-       "3      resnext50_32x4d     0.461538       1.85677     0.777512      0.643034\n",
-       "4            googlenet     0.456731         1.594     0.771531      0.691261\n",
-       "5             resnet18     0.456731       2.18356     0.931818      0.213244\n",
-       "6            mobilenet     0.451923       1.84646     0.892344      0.375436\n",
-       "7          densenet161     0.447115       1.95333      0.90311      0.339584\n",
-       "8             resnet50     0.447115       2.08339     0.913876      0.295867\n",
-       "9            resnet152     0.447115       2.03128      0.91866      0.287049\n",
-       "10           resnet101     0.442308       2.14986      0.92823      0.250579\n",
-       "11         densenet201     0.418269       2.19347     0.912679      0.301306\n",
-       "12               vgg16     0.389423       1.45822     0.533493       1.14147\n",
-       "13               vgg13     0.350962       1.48536     0.405502       1.38342\n",
-       "14               vgg11     0.341346       1.51324     0.380383       1.42172\n",
-       "15          mnasnet1_0     0.264423       1.60785       0.2811       1.57103\n",
-       "16          mnasnet0_5     0.254808       1.60047     0.266746       1.57608\n",
-       "17  shufflenet_v2_x0_5         0.25        1.5914     0.239234        1.5938\n",
-       "18               vgg19     0.230769           NaN     0.220096           NaN"
+       "          model best val acc best val loss training acc training loss\n",
+       "0   densenet161     0.827839      0.633519     0.993132     0.0366975\n",
+       "1     resnet152     0.826007      0.690557     0.995879     0.0258854\n",
+       "2      resnet34     0.820513      0.715833     0.992674     0.0308838\n",
+       "3   densenet121     0.804029      0.717805     0.986264     0.0579804\n",
+       "4      resnet18     0.800366      0.810565     0.994963      0.031701\n",
+       "5     googlenet     0.791209      0.826886     0.989927     0.0526342\n",
+       "6     resnet101     0.791209      0.744109     0.992674     0.0240675\n",
+       "7      resnet50     0.771062      0.811559     0.962454      0.120791\n",
+       "8         vgg11     0.705128       0.97788     0.919414      0.293853\n",
+       "9         vgg13     0.694139      0.998538      0.93544      0.254939\n",
+       "10        vgg16     0.684982       1.17172     0.912088      0.306161\n",
+       "11      alexnet     0.298535       1.54797     0.331044       1.50295"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataPath = path('Models')\n",
-    "modelsTitles = os.listdir(dataPath())[3:]\n",
+    "picType = 'gasf'\n",
+    "dataType = 'cca128'\n",
+    "dataPath = path('Models\\\\'+picType)\n",
+    "modelsTitles = os.listdir(dataPath())[1:]\n",
     "table = pd.DataFrame(index = range(len(modelsTitles)), columns = ['model', 'best val acc', 'best val loss', 'training acc', 'training loss'])\n",
     "\n",
     "for model, k in zip(modelsTitles, list(range(len(modelsTitles)))):\n",
     "                    \n",
-    "    Path = path(dataPath/model)\n",
+    "    Path = path(dataPath/model+'/'+dataType)\n",
     "    Training, Validation = torch.load(Path/'stats512.pth')['512']\n",
     "    \n",
     "    for i in range(len(Training[0])):\n",
@@ -324,116 +219,6 @@
     "                    \n",
     "table = table.sort_values(by = 'best val acc', ascending = False, ignore_index = True)\n",
     "table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory Models\\resnet34 loaded successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataPath = path('Models\\\\resnet34')\n",
-    "Training, Validation = torch.load(dataPath/'stats512.pth')['512']\n",
-    "\n",
-    "for i in range(len(Training[0])):\n",
-    "    Training[0][i] = Training[0][i].item()\n",
-    "    Validation[0][i] = Validation[0][i].item()\n",
-    "    \n",
-    "for i in [0, 1]:\n",
-    "    Training[i] = Training[i][:10]\n",
-    "    Validation[i] = Validation[i][:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[[tensor(0.2141, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.2464, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.3337, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4294, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4689, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.5586, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.5909, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.7823, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.8660, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.8959, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.9139, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.9246, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.9342, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.9605, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.9342, device='cuda:0', dtype=torch.float64)],\n",
-       "  [2.008943215796822,\n",
-       "   1.778452232123562,\n",
-       "   1.695092449062749,\n",
-       "   1.5046700917932976,\n",
-       "   1.4252638071062462,\n",
-       "   1.216274263613532,\n",
-       "   1.1111783914303666,\n",
-       "   0.5972058245439849,\n",
-       "   0.4228935797106136,\n",
-       "   0.3591094279403321,\n",
-       "   0.32629502133319255,\n",
-       "   0.2346799276662215,\n",
-       "   0.22237510686856138,\n",
-       "   0.18353441799656625,\n",
-       "   0.2111812841378901]],\n",
-       " [[tensor(0.2500, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.2740, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.2788, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.2933, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.3798, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.3413, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.3077, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.3990, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4375, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4183, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4327, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4423, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4471, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4904, device='cuda:0', dtype=torch.float64),\n",
-       "   tensor(0.4423, device='cuda:0', dtype=torch.float64)],\n",
-       "  [1.885743797971652,\n",
-       "   1.914751287836295,\n",
-       "   1.8192542894528463,\n",
-       "   2.0636952748665442,\n",
-       "   1.8731506913900375,\n",
-       "   2.0219129226528683,\n",
-       "   2.683485744091181,\n",
-       "   2.0129396674724727,\n",
-       "   1.99219465141113,\n",
-       "   2.034949091764597,\n",
-       "   1.9557057808224971,\n",
-       "   2.004878056737093,\n",
-       "   2.1283580872874994,\n",
-       "   2.131823919713497,\n",
-       "   2.1042896824387403]]]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.load(dataPath/'stats512.pth')['512']"
    ]
   },
   {
