--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "image_size = 224\n",
-    "batch_size = 1\n",
+    "batch_size = 8\n",
     "workers = 1\n",
     "ngpu = 1\n",
     "validation_split = .2\n",
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    folder = 'GAF_Combinados'\n",
+    "    folder = 'MTF_Combinados'\n",
     "#     folder = '0179520170504'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
@@ -231,9 +231,9 @@
     "    \n",
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
-    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 50)\n",
-    "#     torch.save(model.state_dict(), 'Models\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
-    "#     torch.save(stats, 'Models\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
+    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 10)\n",
+    "    torch.save(model.state_dict(), 'Models\\\\mtf\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
+    "    torch.save(stats, 'Models\\\\mtf\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
     "    return model, stats"
    ]
@@ -312,19 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelDict = {\n",
     "#     'resnet18': [models.resnet18(pretrained = True), 512],\n",
     "#     'resnet34': [models.resnet34(pretrained = True), 512],\n",
-    "    'resnet50': [models.resnet50(pretrained = True), 2048],\n",
+    "#     'resnet50': [models.resnet50(pretrained = True), 2048],\n",
     "#     'resnet101': [models.resnet101(pretrained = True), 2048],\n",
     "#     'resnet152': [models.resnet152(pretrained = True), 2048],\n",
     "#     'densenet121': [models.densenet121(pretrained = True), 1024],\n",
     "#     'densenet161': [models.densenet161(pretrained = True), 2208],\n",
-    "#     'densenet169': [models.densenet169(pretrained = True), 1664],\n",
+    "    'densenet169': [models.densenet169(pretrained = True), 1664],\n",
     "#     'densenet201': [models.densenet201(pretrained = True), 1920],\n",
     "#     'alexnet': [models.alexnet(pretrained = True), 4096],\n",
     "#     'googlenet': [models.googlenet(pretrained = True), 1024],\n",
@@ -365,17 +365,28 @@
     "#     optimizer = optim.Adam(model.parameters(), lr = 0.001)\n",
     "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 15, gamma = 0.1)\n",
     "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize)\n",
-    "    del(model)"
+    "    del(model)\n",
+    "    torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training stage:512\n",
+      "Epoch 0/9\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
-    "modelType = 'resnet'\n",
-    "modelSize = '50'\n",
+    "modelType = 'densenet'\n",
+    "modelSize = '169'\n",
     "dataType = '512'\n",
     "figSize = '128'\n",
     "\n",
