--- a/Codigos/Pytorch/GeneticAlgorithm2.ipynb
+++ b/Codigos/Pytorch/GeneticAlgorithm2.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Full tutorial can be accessed at: \n",
+    "# https://www.kdnuggets.com/2017/07/design-evolution-evolve-neural-network-automl.html\n",
+    "\n",
     "# Basic structure of the algorithm.\n",
     "\n",
     "# new_population = []\n",
@@ -15,6 +18,135 @@
     "#   choose the second best individual with probability p2\n",
     "#   choose the third best individual with probability p3\n",
     "#   mutate and append selected to the new_population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Basic building blocks\n",
+    "# Definition of search space\n",
+    "# lower bound - upper bound, type param, mutation rate\n",
+    "LAYER_SPACE = dict()\n",
+    "LAYER_SPACE['nb_units'] = (128, 1024, 'int', 0.15) # number of hidden units\n",
+    "LAYER_SPACE['dropout_rate'] = (0.0, 0.7, 'float', 0.2) # dropout rate\n",
+    "LAYER_SPACE['activation'] = (0, ['linear', 'tanh', 'relu', 'sigmoid', 'elu'], 'list', 0.2)\n",
+    "\n",
+    "NET_SPACE = dict()\n",
+    "NET_SPACE['nb_layers'] = (1, 3, 'int', 0.15) # number of hidden layers\n",
+    "NET_SPACE['lr'] = (0.0001, 0.1, 'float', 0.15) # learning rate\n",
+    "NET_SPACE['weight_decay'] = (0.00001, 0.0004, 'float', 0.2) \n",
+    "NET_SPACE['optimizer'] = (0, ['sgd', 'adam', 'adadelta', 'rmsprop'], 'list', 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# randomizing a network\n",
+    "def random_value(space):\n",
+    "    \"\"\"Sample random value from the given space.\"\"\"\n",
+    "    val = None\n",
+    "    if space[2] == 'int':\n",
+    "        val = random.randint(space[0], space[1])\n",
+    "    if space[2] == 'list':\n",
+    "        val = random.sample(space[1], 1)[0]\n",
+    "    if space[2] == 'float':\n",
+    "        val = ((space[1] - space[0]) * random.random()) + space[0]\n",
+    "    return {'val': val, 'id': random.randint(0, 2**10)}\n",
+    "\n",
+    "def randomize_network(bounded = True):\n",
+    "    \"\"\"Create a random network.\"\"\"\n",
+    "    global NET_SPACE, LAYER_SPACE\n",
+    "    net = dict()\n",
+    "    for k in NET_SPACE.keys():\n",
+    "        net[k] = random_value(NET_SPACE[k])\n",
+    "        \n",
+    "    if bounded: # ???\n",
+    "        net['nb_layers']['val'] = min(net['nb_layers']['val'], 1)\n",
+    "        \n",
+    "    layers = []\n",
+    "    for i in range(net['nb_layers']['val']):\n",
+    "        layer = dict()\n",
+    "        for k in LAYER_SPACE.keys():\n",
+    "            layer[k] = random_value(LAYER_SPACE[k])\n",
+    "        layers.append(layer)\n",
+    "    net['layers'] = layers\n",
+    "    \n",
+    "    return net\n",
+    "    \n",
+    "# each network element has been assigned a probability of mutation\n",
+    "# each mutation will alter the parameter by resampling the parameter space\n",
+    "def mutate_net(net):\n",
+    "    \"\"\"Mutate a network.\"\"\"\n",
+    "    global NET_SPACE, LAYER_SPACE\n",
+    "    \n",
+    "    # mutate optimizer\n",
+    "    for k in ['lr', 'weight_decay', 'optimizer']:\n",
+    "        if random.random() < NET_SPACE[k][-1]:\n",
+    "            net[k] = random_value(NET_SPACE[k])\n",
+    "            \n",
+    "    # mutate layers\n",
+    "    for layer in net['layers']:\n",
+    "        for k in LAYER_SPACE.keys():\n",
+    "            if random.random() < LAYER_SPACE[k][-1]:\n",
+    "                layer[k] = random_value(LAYER_SPACE[k])\n",
+    "    \n",
+    "    # mutate number of layers -- RANDOMLY ADD\n",
+    "    if random.random() < NET_SPACE['nb_layers'][-1]:\n",
+    "        if net['nb_layers']['val'] < NET_SPACE['nb_layers'][1]:\n",
+    "            if random.random() < 0.5:\n",
+    "                layer = dict()\n",
+    "                for k in LAYER_SPACE.keys():\n",
+    "                    layer[k] = random_value(LAYER_SPACE[k])\n",
+    "                net['layers'].append(layer)\n",
+    "                # value & id update\n",
+    "                net['nb_layers']['val'] = len(net['layers'])\n",
+    "                net['nb_layers']['id'] += 1\n",
+    "            else:\n",
+    "                if net['nb_layers']['val'] > 1:\n",
+    "                    net['layers'].pop()\n",
+    "                    net['nb_layers']['val'] = len(net['layers'])\n",
+    "                    net['nb_layers']['id'] -= 1\n",
+    "    return net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "class CustomModel():\n",
+    "    def __init__(self, build_info, CUDA = True):\n",
+    "        previous_units = 28 * 28\n",
+    "        \n",
+    "        self.model = nn.Sequential()\n",
+    "        self.model.add_module('flatten', Flatten())\n",
+    "        \n",
+    "        for i, layer_info in enumerate(build_info['layers']):\n",
+    "            i = str(i)\n",
+    "            self.model.add_module(\n",
+    "                'fc_' + i,\n",
+    "                nn.Linear(previous_units, layer_info['nb_units']['val'])\n",
+    "            )\n",
+    "            self.model.add_module(\n",
+    "                'dropout_' + i,\n",
+    "                nn.Dropout(p = layer_info['dropout_rate']['val'])\n",
+    "            )\n",
+    "            \n",
+    "            if layer_info['activation']['val'] == 'tanh':\n",
+    "                self.model.add_module(\n",
+    "                    'tanh_' + i,\n",
+    "                    nn.Tanh()\n",
+    "                )\n",
+    "            "
    ]
   }
  ],
