--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "image_size = 224\n",
-    "batch_size = 8\n",
+    "batch_size = 4\n",
     "workers = 1\n",
     "ngpu = 1\n",
     "validation_split = .2\n",
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    folder = 'MTF_Combinados'\n",
+    "    folder = 'RP_Combinados'\n",
     "#     folder = '0179520170504'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
@@ -231,9 +231,9 @@
     "    \n",
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
-    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 10)\n",
-    "    torch.save(model.state_dict(), 'Models\\\\mtf\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
-    "    torch.save(stats, 'Models\\\\mtf\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
+    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 20)\n",
+    "    torch.save(model.state_dict(), 'Models\\\\rp\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
+    "    torch.save(stats, 'Models\\\\rp\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
     "    return model, stats"
    ]
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,13 +324,13 @@
     "#     'resnet152': [models.resnet152(pretrained = True), 2048],\n",
     "#     'densenet121': [models.densenet121(pretrained = True), 1024],\n",
     "#     'densenet161': [models.densenet161(pretrained = True), 2208],\n",
-    "    'densenet169': [models.densenet169(pretrained = True), 1664],\n",
+    "#     'densenet169': [models.densenet169(pretrained = True), 1664],\n",
     "#     'densenet201': [models.densenet201(pretrained = True), 1920],\n",
     "#     'alexnet': [models.alexnet(pretrained = True), 4096],\n",
     "#     'googlenet': [models.googlenet(pretrained = True), 1024],\n",
     "#     'vgg11': [models.vgg11(pretrained = True), 4096],\n",
     "#     'vgg13': [models.vgg13(pretrained = True), 4096],\n",
-    "#     'vgg16': [models.vgg16(pretrained = True), 4096],\n",
+    "    'vgg16': [models.vgg16(pretrained = True), 4096],\n",
     "#     'vgg19': [models.vgg19(pretrained = True), 4096],\n",
     "#     'mnasnet0_5': [models.mnasnet0_5(pretrained = True), 1280],\n",
     "#     'mnasnet1_0': [models.mnasnet1_0(pretrained = True), 1280],\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -379,14 +379,114 @@
      "output_type": "stream",
      "text": [
       "Training stage:512\n",
-      "Epoch 0/9\n",
-      "----------\n"
+      "Epoch 0/19\n",
+      "----------\n",
+      "train Loss: 2.2197 Acc: 0.2088\n",
+      "val Loss: 1.8126 Acc: 0.1978\n",
+      "\n",
+      "Epoch 1/19\n",
+      "----------\n",
+      "train Loss: 1.7199 Acc: 0.1973\n",
+      "val Loss: 1.6346 Acc: 0.1978\n",
+      "\n",
+      "Epoch 2/19\n",
+      "----------\n",
+      "train Loss: 1.6803 Acc: 0.2161\n",
+      "val Loss: 1.6442 Acc: 0.2289\n",
+      "\n",
+      "Epoch 3/19\n",
+      "----------\n",
+      "train Loss: 1.6735 Acc: 0.2106\n",
+      "val Loss: 1.6252 Acc: 0.2216\n",
+      "\n",
+      "Epoch 4/19\n",
+      "----------\n",
+      "train Loss: 1.6641 Acc: 0.2056\n",
+      "val Loss: 1.6280 Acc: 0.2216\n",
+      "\n",
+      "Epoch 5/19\n",
+      "----------\n",
+      "train Loss: 1.6571 Acc: 0.1960\n",
+      "val Loss: 1.6380 Acc: 0.2216\n",
+      "\n",
+      "Epoch 6/19\n",
+      "----------\n",
+      "train Loss: 1.6606 Acc: 0.1937\n",
+      "val Loss: 1.6516 Acc: 0.2289\n",
+      "\n",
+      "Epoch 7/19\n",
+      "----------\n",
+      "train Loss: 1.6503 Acc: 0.1996\n",
+      "val Loss: 1.6402 Acc: 0.2216\n",
+      "\n",
+      "Epoch 8/19\n",
+      "----------\n",
+      "train Loss: 1.6369 Acc: 0.2248\n",
+      "val Loss: 1.6674 Acc: 0.2289\n",
+      "\n",
+      "Epoch 9/19\n",
+      "----------\n",
+      "train Loss: 1.6405 Acc: 0.2266\n",
+      "val Loss: 1.6385 Acc: 0.2289\n",
+      "\n",
+      "Epoch 10/19\n",
+      "----------\n",
+      "train Loss: 1.6464 Acc: 0.2138\n",
+      "val Loss: 1.6169 Acc: 0.2289\n",
+      "\n",
+      "Epoch 11/19\n",
+      "----------\n",
+      "train Loss: 1.6360 Acc: 0.2175\n",
+      "val Loss: 1.6145 Acc: 0.2198\n",
+      "\n",
+      "Epoch 12/19\n",
+      "----------\n",
+      "train Loss: 1.6385 Acc: 0.2166\n",
+      "val Loss: 1.6174 Acc: 0.2289\n",
+      "\n",
+      "Epoch 13/19\n",
+      "----------\n",
+      "train Loss: 1.6363 Acc: 0.2271\n",
+      "val Loss: 1.6172 Acc: 0.1960\n",
+      "\n",
+      "Epoch 14/19\n",
+      "----------\n",
+      "train Loss: 1.6348 Acc: 0.2253\n",
+      "val Loss: 1.6070 Acc: 0.2326\n",
+      "\n",
+      "Epoch 15/19\n",
+      "----------\n",
+      "train Loss: 1.6179 Acc: 0.2321\n",
+      "val Loss: 1.5951 Acc: 0.2454\n",
+      "\n",
+      "Epoch 16/19\n",
+      "----------\n",
+      "train Loss: 1.6060 Acc: 0.2308\n",
+      "val Loss: 1.5933 Acc: 0.2418\n",
+      "\n",
+      "Epoch 17/19\n",
+      "----------\n",
+      "train Loss: 1.6064 Acc: 0.2431\n",
+      "val Loss: 1.5919 Acc: 0.2418\n",
+      "\n",
+      "Epoch 18/19\n",
+      "----------\n",
+      "train Loss: 1.6075 Acc: 0.2253\n",
+      "val Loss: 1.5893 Acc: 0.2271\n",
+      "\n",
+      "Epoch 19/19\n",
+      "----------\n",
+      "train Loss: 1.5999 Acc: 0.2294\n",
+      "val Loss: 1.5922 Acc: 0.2381\n",
+      "\n",
+      "Training complete in 117m 60s\n",
+      "Best val Acc: 0.245421\n"
      ]
     }
    ],
    "source": [
-    "modelType = 'densenet'\n",
-    "modelSize = '169'\n",
+    "modelType = 'vgg'\n",
+    "modelSize = '16'\n",
     "dataType = '512'\n",
     "figSize = '128'\n",
     "\n",
