--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "image_size = 224\n",
-    "batch_size = 12\n",
+    "batch_size = 28\n",
     "workers = 1\n",
     "ngpu = 1\n",
     "validation_split = .2\n",
@@ -70,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    folder = 'GAF_Combinados_difference'\n",
+    "    folder = 'RP_Combinados'\n",
     "#     folder = '0179520170504'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
@@ -230,7 +221,7 @@
     "        model.train(mode = was_training)\n",
     "        \n",
     "        \n",
-    "def trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize):\n",
+    "def trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize, numEpochs = 10):\n",
     "#     dataTypes = ['512', '768', 'shifted']\n",
     "    stats = {\n",
     "        '512': [],\n",
@@ -240,9 +231,9 @@
     "    \n",
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
-    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 10)\n",
-    "    torch.save(model.state_dict(), 'Models\\\\gadf\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
-    "    torch.save(stats, 'Models\\\\gadf\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
+    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = numEpochs)\n",
+    "#     torch.save(model.state_dict(), 'Models\\\\gadf\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
+    "#     torch.save(stats, 'Models\\\\gadf\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
     "    return model, stats"
    ]
@@ -321,19 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelDict = {\n",
     "#     'resnet18': [models.resnet18(pretrained = True), 512],\n",
     "#     'resnet34': [models.resnet34(pretrained = True), 512],\n",
-    "#     'resnet50': [models.resnet50(pretrained = True), 2048],\n",
+    "    'resnet50': [models.resnet50(pretrained = True), 2048],\n",
     "#     'resnet101': [models.resnet101(pretrained = True), 2048],\n",
     "#     'resnet152': [models.resnet152(pretrained = True), 2048],\n",
     "#     'densenet121': [models.densenet121(pretrained = True), 1024],\n",
     "#     'densenet161': [models.densenet161(pretrained = True), 2208],\n",
-    "    'densenet169': [models.densenet169(pretrained = True), 1664],\n",
+    "#     'densenet169': [models.densenet169(pretrained = True), 1664],\n",
     "#     'densenet201': [models.densenet201(pretrained = True), 1920],\n",
     "#     'alexnet': [models.alexnet(pretrained = True), 4096],\n",
     "#     'googlenet': [models.googlenet(pretrained = True), 1024],\n",
@@ -361,7 +352,7 @@
     "    }\n",
     "    return Dict[modelType](model)\n",
     "\n",
-    "def autoTraining(modelType, modelSize, dataType, figSize):\n",
+    "def autoTraining(modelType, modelSize, dataType, figSize, numEpochs):\n",
     "    modelName = modelType+modelSize\n",
     "    numClasses = 5\n",
     "    model = modelDict[modelName][0]\n",
@@ -370,17 +361,17 @@
     "    classifier = nn.Linear(numFeatures, numClasses)\n",
     "    model = model.to(device)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.9)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr = 0.01, momentum = 0.3)\n",
     "#     optimizer = optim.Adam(model.parameters(), lr = 0.001)\n",
-    "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 15, gamma = 0.1)\n",
-    "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize)\n",
+    "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.1)\n",
+    "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize, numEpochs)\n",
     "    del(model)\n",
     "    torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,68 +379,143 @@
      "output_type": "stream",
      "text": [
       "Training stage:512\n",
-      "Epoch 0/9\n",
+      "Epoch 0/24\n",
       "----------\n",
-      "train Loss: 2.0573 Acc: 0.3178\n",
-      "val Loss: 1.6027 Acc: 0.3901\n",
+      "train Loss: 1.8909 Acc: 0.3810\n",
+      "val Loss: 1.3023 Acc: 0.4817\n",
       "\n",
-      "Epoch 1/9\n",
+      "Epoch 1/24\n",
       "----------\n",
-      "train Loss: 0.8543 Acc: 0.7001\n",
-      "val Loss: 0.9951 Acc: 0.6575\n",
+      "train Loss: 0.5467 Acc: 0.8150\n",
+      "val Loss: 0.9750 Acc: 0.6502\n",
       "\n",
-      "Epoch 2/9\n",
+      "Epoch 2/24\n",
       "----------\n",
-      "train Loss: 0.3184 Acc: 0.8970\n",
-      "val Loss: 0.6342 Acc: 0.7912\n",
+      "train Loss: 0.1383 Acc: 0.9625\n",
+      "val Loss: 0.5783 Acc: 0.8150\n",
       "\n",
-      "Epoch 3/9\n",
+      "Epoch 3/24\n",
       "----------\n",
-      "train Loss: 0.1478 Acc: 0.9592\n",
-      "val Loss: 0.5252 Acc: 0.8278\n",
+      "train Loss: 0.0295 Acc: 0.9950\n",
+      "val Loss: 0.4924 Acc: 0.8407\n",
       "\n",
-      "Epoch 4/9\n",
+      "Epoch 4/24\n",
       "----------\n",
-      "train Loss: 0.0677 Acc: 0.9840\n",
-      "val Loss: 0.4905 Acc: 0.8278\n",
+      "train Loss: 0.0079 Acc: 1.0000\n",
+      "val Loss: 0.4187 Acc: 0.8718\n",
       "\n",
-      "Epoch 5/9\n",
+      "Epoch 5/24\n",
       "----------\n",
-      "train Loss: 0.0827 Acc: 0.9725\n",
-      "val Loss: 0.4527 Acc: 0.8553\n",
+      "train Loss: 0.0042 Acc: 1.0000\n",
+      "val Loss: 0.4071 Acc: 0.8718\n",
       "\n",
-      "Epoch 6/9\n",
+      "Epoch 6/24\n",
       "----------\n",
-      "train Loss: 0.0813 Acc: 0.9776\n",
-      "val Loss: 0.4369 Acc: 0.8608\n",
+      "train Loss: 0.0041 Acc: 0.9995\n",
+      "val Loss: 0.4202 Acc: 0.8700\n",
       "\n",
-      "Epoch 7/9\n",
+      "Epoch 7/24\n",
       "----------\n",
-      "train Loss: 0.0506 Acc: 0.9835\n",
-      "val Loss: 0.5086 Acc: 0.8700\n",
+      "train Loss: 0.0032 Acc: 1.0000\n",
+      "val Loss: 0.4364 Acc: 0.8681\n",
       "\n",
-      "Epoch 8/9\n",
+      "Epoch 8/24\n",
       "----------\n",
-      "train Loss: 0.0905 Acc: 0.9679\n",
-      "val Loss: 0.5315 Acc: 0.8700\n",
+      "train Loss: 0.0026 Acc: 1.0000\n",
+      "val Loss: 0.4327 Acc: 0.8736\n",
       "\n",
-      "Epoch 9/9\n",
+      "Epoch 9/24\n",
       "----------\n",
-      "train Loss: 0.0730 Acc: 0.9753\n",
-      "val Loss: 0.5094 Acc: 0.8736\n",
+      "train Loss: 0.0017 Acc: 1.0000\n",
+      "val Loss: 0.4123 Acc: 0.8681\n",
       "\n",
-      "Training complete in 49m 29s\n",
-      "Best val Acc: 0.873626\n"
+      "Epoch 10/24\n",
+      "----------\n",
+      "train Loss: 0.0015 Acc: 1.0000\n",
+      "val Loss: 0.4047 Acc: 0.8718\n",
+      "\n",
+      "Epoch 11/24\n",
+      "----------\n",
+      "train Loss: 0.0014 Acc: 1.0000\n",
+      "val Loss: 0.4084 Acc: 0.8718\n",
+      "\n",
+      "Epoch 12/24\n",
+      "----------\n",
+      "train Loss: 0.0012 Acc: 1.0000\n",
+      "val Loss: 0.4341 Acc: 0.8571\n",
+      "\n",
+      "Epoch 13/24\n",
+      "----------\n",
+      "train Loss: 0.0013 Acc: 1.0000\n",
+      "val Loss: 0.4096 Acc: 0.8736\n",
+      "\n",
+      "Epoch 14/24\n",
+      "----------\n",
+      "train Loss: 0.0012 Acc: 1.0000\n",
+      "val Loss: 0.4045 Acc: 0.8736\n",
+      "\n",
+      "Epoch 15/24\n",
+      "----------\n",
+      "train Loss: 0.0014 Acc: 1.0000\n",
+      "val Loss: 0.3992 Acc: 0.8773\n",
+      "\n",
+      "Epoch 16/24\n",
+      "----------\n",
+      "train Loss: 0.0012 Acc: 1.0000\n",
+      "val Loss: 0.4174 Acc: 0.8736\n",
+      "\n",
+      "Epoch 17/24\n",
+      "----------\n",
+      "train Loss: 0.0014 Acc: 1.0000\n",
+      "val Loss: 0.4191 Acc: 0.8773\n",
+      "\n",
+      "Epoch 18/24\n",
+      "----------\n",
+      "train Loss: 0.0017 Acc: 0.9995\n",
+      "val Loss: 0.4148 Acc: 0.8755\n",
+      "\n",
+      "Epoch 19/24\n",
+      "----------\n",
+      "train Loss: 0.0012 Acc: 1.0000\n",
+      "val Loss: 0.4309 Acc: 0.8681\n",
+      "\n",
+      "Epoch 20/24\n",
+      "----------\n",
+      "train Loss: 0.0013 Acc: 1.0000\n",
+      "val Loss: 0.4117 Acc: 0.8755\n",
+      "\n",
+      "Epoch 21/24\n",
+      "----------\n",
+      "train Loss: 0.0018 Acc: 1.0000\n",
+      "val Loss: 0.4187 Acc: 0.8736\n",
+      "\n",
+      "Epoch 22/24\n",
+      "----------\n",
+      "train Loss: 0.0015 Acc: 0.9995\n",
+      "val Loss: 0.4163 Acc: 0.8791\n",
+      "\n",
+      "Epoch 23/24\n",
+      "----------\n",
+      "train Loss: 0.0025 Acc: 0.9995\n",
+      "val Loss: 0.4062 Acc: 0.8736\n",
+      "\n",
+      "Epoch 24/24\n",
+      "----------\n",
+      "train Loss: 0.0014 Acc: 1.0000\n",
+      "val Loss: 0.4282 Acc: 0.8681\n",
+      "\n",
+      "Training complete in 101m 43s\n",
+      "Best val Acc: 0.879121\n"
      ]
     }
    ],
    "source": [
-    "modelType = 'densenet'\n",
-    "modelSize = '169'\n",
+    "modelType = 'resnet'\n",
+    "modelSize = '50'\n",
     "dataType = '512'\n",
     "figSize = '128'\n",
     "\n",
-    "model = autoTraining(modelType, modelSize, dataType, figSize)"
+    "model = autoTraining(modelType, modelSize, dataType, figSize, 25)"
    ]
   },
   {
