--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "image_size = 224\n",
-    "batch_size = 28\n",
+    "batch_size = 4\n",
     "workers = 1\n",
     "ngpu = 1\n",
     "validation_split = .2\n",
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    folder = 'RP_Combinados'\n",
+    "    folder = 'Four_Combinados'\n",
     "#     folder = '0179520170504'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
@@ -232,8 +232,8 @@
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
     "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = numEpochs)\n",
-    "#     torch.save(model.state_dict(), 'Models\\\\gadf\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
-    "#     torch.save(stats, 'Models\\\\gadf\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
+    "    torch.save(model.state_dict(), 'Models\\\\four\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
+    "    torch.save(stats, 'Models\\\\four\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
     "    return model, stats"
    ]
@@ -319,7 +319,7 @@
     "modelDict = {\n",
     "#     'resnet18': [models.resnet18(pretrained = True), 512],\n",
     "#     'resnet34': [models.resnet34(pretrained = True), 512],\n",
-    "    'resnet50': [models.resnet50(pretrained = True), 2048],\n",
+    "#     'resnet50': [models.resnet50(pretrained = True), 2048],\n",
     "#     'resnet101': [models.resnet101(pretrained = True), 2048],\n",
     "#     'resnet152': [models.resnet152(pretrained = True), 2048],\n",
     "#     'densenet121': [models.densenet121(pretrained = True), 1024],\n",
@@ -330,7 +330,7 @@
     "#     'googlenet': [models.googlenet(pretrained = True), 1024],\n",
     "#     'vgg11': [models.vgg11(pretrained = True), 4096],\n",
     "#     'vgg13': [models.vgg13(pretrained = True), 4096],\n",
-    "#     'vgg16': [models.vgg16(pretrained = True), 4096],\n",
+    "    'vgg16': [models.vgg16(pretrained = True), 4096],\n",
     "#     'vgg19': [models.vgg19(pretrained = True), 4096],\n",
     "#     'mnasnet0_5': [models.mnasnet0_5(pretrained = True), 1280],\n",
     "#     'mnasnet1_0': [models.mnasnet1_0(pretrained = True), 1280],\n",
@@ -361,7 +361,7 @@
     "    classifier = nn.Linear(numFeatures, numClasses)\n",
     "    model = model.to(device)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr = 0.01, momentum = 0.3)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.1)\n",
     "#     optimizer = optim.Adam(model.parameters(), lr = 0.001)\n",
     "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.1)\n",
     "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize, numEpochs)\n",
@@ -379,143 +379,68 @@
      "output_type": "stream",
      "text": [
       "Training stage:512\n",
-      "Epoch 0/24\n",
+      "Epoch 0/9\n",
       "----------\n",
-      "train Loss: 1.8909 Acc: 0.3810\n",
-      "val Loss: 1.3023 Acc: 0.4817\n",
+      "train Loss: 1.8649 Acc: 0.2161\n",
+      "val Loss: 1.6117 Acc: 0.2491\n",
       "\n",
-      "Epoch 1/24\n",
+      "Epoch 1/9\n",
       "----------\n",
-      "train Loss: 0.5467 Acc: 0.8150\n",
-      "val Loss: 0.9750 Acc: 0.6502\n",
+      "train Loss: 1.6684 Acc: 0.2285\n",
+      "val Loss: 1.6017 Acc: 0.2308\n",
       "\n",
-      "Epoch 2/24\n",
+      "Epoch 2/9\n",
       "----------\n",
-      "train Loss: 0.1383 Acc: 0.9625\n",
-      "val Loss: 0.5783 Acc: 0.8150\n",
+      "train Loss: 1.5994 Acc: 0.2605\n",
+      "val Loss: 1.5436 Acc: 0.3535\n",
       "\n",
-      "Epoch 3/24\n",
+      "Epoch 3/9\n",
       "----------\n",
-      "train Loss: 0.0295 Acc: 0.9950\n",
-      "val Loss: 0.4924 Acc: 0.8407\n",
+      "train Loss: 1.5188 Acc: 0.3329\n",
+      "val Loss: 1.5608 Acc: 0.2784\n",
       "\n",
-      "Epoch 4/24\n",
+      "Epoch 4/9\n",
       "----------\n",
-      "train Loss: 0.0079 Acc: 1.0000\n",
-      "val Loss: 0.4187 Acc: 0.8718\n",
+      "train Loss: 1.4256 Acc: 0.3846\n",
+      "val Loss: 1.4038 Acc: 0.4286\n",
       "\n",
-      "Epoch 5/24\n",
+      "Epoch 5/9\n",
       "----------\n",
-      "train Loss: 0.0042 Acc: 1.0000\n",
-      "val Loss: 0.4071 Acc: 0.8718\n",
+      "train Loss: 1.2836 Acc: 0.4730\n",
+      "val Loss: 1.3318 Acc: 0.4377\n",
       "\n",
-      "Epoch 6/24\n",
+      "Epoch 6/9\n",
       "----------\n",
-      "train Loss: 0.0041 Acc: 0.9995\n",
-      "val Loss: 0.4202 Acc: 0.8700\n",
+      "train Loss: 1.1077 Acc: 0.5453\n",
+      "val Loss: 1.2297 Acc: 0.5018\n",
       "\n",
-      "Epoch 7/24\n",
+      "Epoch 7/9\n",
       "----------\n",
-      "train Loss: 0.0032 Acc: 1.0000\n",
-      "val Loss: 0.4364 Acc: 0.8681\n",
+      "train Loss: 0.9010 Acc: 0.6516\n",
+      "val Loss: 1.1388 Acc: 0.5421\n",
       "\n",
-      "Epoch 8/24\n",
+      "Epoch 8/9\n",
       "----------\n",
-      "train Loss: 0.0026 Acc: 1.0000\n",
-      "val Loss: 0.4327 Acc: 0.8736\n",
+      "train Loss: 0.6812 Acc: 0.7473\n",
+      "val Loss: 1.2174 Acc: 0.5531\n",
       "\n",
-      "Epoch 9/24\n",
+      "Epoch 9/9\n",
       "----------\n",
-      "train Loss: 0.0017 Acc: 1.0000\n",
-      "val Loss: 0.4123 Acc: 0.8681\n",
+      "train Loss: 0.5033 Acc: 0.8196\n",
+      "val Loss: 1.4275 Acc: 0.5037\n",
       "\n",
-      "Epoch 10/24\n",
-      "----------\n",
-      "train Loss: 0.0015 Acc: 1.0000\n",
-      "val Loss: 0.4047 Acc: 0.8718\n",
-      "\n",
-      "Epoch 11/24\n",
-      "----------\n",
-      "train Loss: 0.0014 Acc: 1.0000\n",
-      "val Loss: 0.4084 Acc: 0.8718\n",
-      "\n",
-      "Epoch 12/24\n",
-      "----------\n",
-      "train Loss: 0.0012 Acc: 1.0000\n",
-      "val Loss: 0.4341 Acc: 0.8571\n",
-      "\n",
-      "Epoch 13/24\n",
-      "----------\n",
-      "train Loss: 0.0013 Acc: 1.0000\n",
-      "val Loss: 0.4096 Acc: 0.8736\n",
-      "\n",
-      "Epoch 14/24\n",
-      "----------\n",
-      "train Loss: 0.0012 Acc: 1.0000\n",
-      "val Loss: 0.4045 Acc: 0.8736\n",
-      "\n",
-      "Epoch 15/24\n",
-      "----------\n",
-      "train Loss: 0.0014 Acc: 1.0000\n",
-      "val Loss: 0.3992 Acc: 0.8773\n",
-      "\n",
-      "Epoch 16/24\n",
-      "----------\n",
-      "train Loss: 0.0012 Acc: 1.0000\n",
-      "val Loss: 0.4174 Acc: 0.8736\n",
-      "\n",
-      "Epoch 17/24\n",
-      "----------\n",
-      "train Loss: 0.0014 Acc: 1.0000\n",
-      "val Loss: 0.4191 Acc: 0.8773\n",
-      "\n",
-      "Epoch 18/24\n",
-      "----------\n",
-      "train Loss: 0.0017 Acc: 0.9995\n",
-      "val Loss: 0.4148 Acc: 0.8755\n",
-      "\n",
-      "Epoch 19/24\n",
-      "----------\n",
-      "train Loss: 0.0012 Acc: 1.0000\n",
-      "val Loss: 0.4309 Acc: 0.8681\n",
-      "\n",
-      "Epoch 20/24\n",
-      "----------\n",
-      "train Loss: 0.0013 Acc: 1.0000\n",
-      "val Loss: 0.4117 Acc: 0.8755\n",
-      "\n",
-      "Epoch 21/24\n",
-      "----------\n",
-      "train Loss: 0.0018 Acc: 1.0000\n",
-      "val Loss: 0.4187 Acc: 0.8736\n",
-      "\n",
-      "Epoch 22/24\n",
-      "----------\n",
-      "train Loss: 0.0015 Acc: 0.9995\n",
-      "val Loss: 0.4163 Acc: 0.8791\n",
-      "\n",
-      "Epoch 23/24\n",
-      "----------\n",
-      "train Loss: 0.0025 Acc: 0.9995\n",
-      "val Loss: 0.4062 Acc: 0.8736\n",
-      "\n",
-      "Epoch 24/24\n",
-      "----------\n",
-      "train Loss: 0.0014 Acc: 1.0000\n",
-      "val Loss: 0.4282 Acc: 0.8681\n",
-      "\n",
-      "Training complete in 101m 43s\n",
-      "Best val Acc: 0.879121\n"
+      "Training complete in 76m 11s\n",
+      "Best val Acc: 0.553114\n"
      ]
     }
    ],
    "source": [
-    "modelType = 'resnet'\n",
-    "modelSize = '50'\n",
+    "modelType = 'vgg'\n",
+    "modelSize = '16'\n",
     "dataType = '512'\n",
     "figSize = '128'\n",
     "\n",
-    "model = autoTraining(modelType, modelSize, dataType, figSize, 25)"
+    "model = autoTraining(modelType, modelSize, dataType, figSize, 10)"
    ]
   },
   {
