--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -23,7 +23,7 @@
     "import numpy as np\n",
     "\n",
     "from utils import path\n",
-    "from utils import createInputFigure\n",
+    "from DataVis import createInputFigure\n",
     "\n",
     "from sklearn import preprocessing\n",
     "import os\n",
@@ -51,10 +51,10 @@
     "batch_size = 4\n",
     "workers = 1\n",
     "ngpu = 1\n",
-    "validation_split = .2\n",
+    "validation_split = .3\n",
     "train_split = 0\n",
     "shuffle_dataset = True\n",
-    "random_seed = 42\n",
+    "random_seed = 31\n",
     "device = torch.device(\"cuda:0\" if (torch.cuda.is_available() and ngpu > 0) else \"cpu\")\n",
     "# device = \"cpu\"    "
    ]
@@ -66,13 +66,15 @@
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    folder = 'Four_Combinados'\n",
+    "    folder = 'GAF_Combinados_difference'\n",
     "#     folder = '0179520170504'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
+    "#     figPath = path('D:\\\\Iniciação Científica\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
     "    dataset = datasets.ImageFolder(root = figPath(),\n",
     "                                  transform = transforms.Compose([\n",
-    "                                      transforms.Resize(image_size),\n",
+    "#                                       transforms.Resize(image_size),\n",
+    "                                      transforms.Resize((448, 224)),\n",
     "                                      transforms.ToTensor(),\n",
     "                                      transforms.Normalize((0.5, 0.5, 0.5),\n",
     "                                                           (0.5, 0.5, 0.5))\n",
@@ -232,8 +234,8 @@
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
     "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = numEpochs)\n",
-    "    torch.save(model.state_dict(), 'Models\\\\four\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
-    "    torch.save(stats, 'Models\\\\four\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
+    "#     torch.save(model.state_dict(), 'Models\\\\three\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
+    "#     torch.save(stats, 'Models\\\\three\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
     "    return model, stats"
    ]
@@ -320,7 +322,7 @@
     "#     'resnet18': [models.resnet18(pretrained = True), 512],\n",
     "#     'resnet34': [models.resnet34(pretrained = True), 512],\n",
     "#     'resnet50': [models.resnet50(pretrained = True), 2048],\n",
-    "#     'resnet101': [models.resnet101(pretrained = True), 2048],\n",
+    "    'resnet101': [models.resnet101(pretrained = True), 2048],\n",
     "#     'resnet152': [models.resnet152(pretrained = True), 2048],\n",
     "#     'densenet121': [models.densenet121(pretrained = True), 1024],\n",
     "#     'densenet161': [models.densenet161(pretrained = True), 2208],\n",
@@ -330,7 +332,7 @@
     "#     'googlenet': [models.googlenet(pretrained = True), 1024],\n",
     "#     'vgg11': [models.vgg11(pretrained = True), 4096],\n",
     "#     'vgg13': [models.vgg13(pretrained = True), 4096],\n",
-    "    'vgg16': [models.vgg16(pretrained = True), 4096],\n",
+    "#     'vgg16': [models.vgg16(pretrained = True), 4096],\n",
     "#     'vgg19': [models.vgg19(pretrained = True), 4096],\n",
     "#     'mnasnet0_5': [models.mnasnet0_5(pretrained = True), 1280],\n",
     "#     'mnasnet1_0': [models.mnasnet1_0(pretrained = True), 1280],\n",
@@ -356,12 +358,12 @@
     "    modelName = modelType+modelSize\n",
     "    numClasses = 5\n",
     "    model = modelDict[modelName][0]\n",
-    "    numFeatures = modelDict[modelName][1]\n",
-    "    classifier = lastLayer(modelType, model)\n",
-    "    classifier = nn.Linear(numFeatures, numClasses)\n",
+    "#     numFeatures = modelDict[modelName][1]\n",
+    "#     classifier = lastLayer(modelType, model) \n",
+    "#     classifier = nn.Linear(numFeatures, numClasses)\n",
     "    model = model.to(device)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.1)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.4)\n",
     "#     optimizer = optim.Adam(model.parameters(), lr = 0.001)\n",
     "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.1)\n",
     "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize, numEpochs)\n",
@@ -379,68 +381,118 @@
      "output_type": "stream",
      "text": [
       "Training stage:512\n",
-      "Epoch 0/9\n",
+      "Epoch 0/19\n",
       "----------\n",
-      "train Loss: 1.8649 Acc: 0.2161\n",
-      "val Loss: 1.6117 Acc: 0.2491\n",
+      "train Loss: 1.9734 Acc: 0.3004\n",
+      "val Loss: 1.3436 Acc: 0.4689\n",
       "\n",
-      "Epoch 1/9\n",
+      "Epoch 1/19\n",
       "----------\n",
-      "train Loss: 1.6684 Acc: 0.2285\n",
-      "val Loss: 1.6017 Acc: 0.2308\n",
+      "train Loss: 1.0547 Acc: 0.6180\n",
+      "val Loss: 1.0395 Acc: 0.6142\n",
       "\n",
-      "Epoch 2/9\n",
+      "Epoch 2/19\n",
       "----------\n",
-      "train Loss: 1.5994 Acc: 0.2605\n",
-      "val Loss: 1.5436 Acc: 0.3535\n",
+      "train Loss: 0.6412 Acc: 0.7891\n",
+      "val Loss: 0.7810 Acc: 0.7350\n",
       "\n",
-      "Epoch 3/9\n",
+      "Epoch 3/19\n",
       "----------\n",
-      "train Loss: 1.5188 Acc: 0.3329\n",
-      "val Loss: 1.5608 Acc: 0.2784\n",
+      "train Loss: 0.3799 Acc: 0.8734\n",
+      "val Loss: 0.6914 Acc: 0.7753\n",
       "\n",
-      "Epoch 4/9\n",
+      "Epoch 4/19\n",
       "----------\n",
-      "train Loss: 1.4256 Acc: 0.3846\n",
-      "val Loss: 1.4038 Acc: 0.4286\n",
+      "train Loss: 0.3484 Acc: 0.8891\n",
+      "val Loss: 0.6289 Acc: 0.8022\n",
       "\n",
-      "Epoch 5/9\n",
+      "Epoch 5/19\n",
       "----------\n",
-      "train Loss: 1.2836 Acc: 0.4730\n",
-      "val Loss: 1.3318 Acc: 0.4377\n",
+      "train Loss: 0.2751 Acc: 0.9163\n",
+      "val Loss: 0.6715 Acc: 0.8010\n",
       "\n",
-      "Epoch 6/9\n",
+      "Epoch 6/19\n",
       "----------\n",
-      "train Loss: 1.1077 Acc: 0.5453\n",
-      "val Loss: 1.2297 Acc: 0.5018\n",
+      "train Loss: 0.2642 Acc: 0.9032\n",
+      "val Loss: 0.6001 Acc: 0.8132\n",
       "\n",
-      "Epoch 7/9\n",
+      "Epoch 7/19\n",
       "----------\n",
-      "train Loss: 0.9010 Acc: 0.6516\n",
-      "val Loss: 1.1388 Acc: 0.5421\n",
+      "train Loss: 0.2488 Acc: 0.9262\n",
+      "val Loss: 0.5632 Acc: 0.8144\n",
       "\n",
-      "Epoch 8/9\n",
+      "Epoch 8/19\n",
       "----------\n",
-      "train Loss: 0.6812 Acc: 0.7473\n",
-      "val Loss: 1.2174 Acc: 0.5531\n",
+      "train Loss: 0.2198 Acc: 0.9314\n",
+      "val Loss: 0.5619 Acc: 0.8352\n",
       "\n",
-      "Epoch 9/9\n",
+      "Epoch 9/19\n",
       "----------\n",
-      "train Loss: 0.5033 Acc: 0.8196\n",
-      "val Loss: 1.4275 Acc: 0.5037\n",
+      "train Loss: 0.2129 Acc: 0.9362\n",
+      "val Loss: 0.4844 Acc: 0.8303\n",
       "\n",
-      "Training complete in 76m 11s\n",
-      "Best val Acc: 0.553114\n"
+      "Epoch 10/19\n",
+      "----------\n",
+      "train Loss: 0.1684 Acc: 0.9471\n",
+      "val Loss: 0.4176 Acc: 0.8694\n",
+      "\n",
+      "Epoch 11/19\n",
+      "----------\n",
+      "train Loss: 0.1278 Acc: 0.9639\n",
+      "val Loss: 0.4114 Acc: 0.8657\n",
+      "\n",
+      "Epoch 12/19\n",
+      "----------\n",
+      "train Loss: 0.1226 Acc: 0.9644\n",
+      "val Loss: 0.3945 Acc: 0.8608\n",
+      "\n",
+      "Epoch 13/19\n",
+      "----------\n",
+      "train Loss: 0.1127 Acc: 0.9655\n",
+      "val Loss: 0.4020 Acc: 0.8694\n",
+      "\n",
+      "Epoch 14/19\n",
+      "----------\n",
+      "train Loss: 0.1107 Acc: 0.9681\n",
+      "val Loss: 0.4020 Acc: 0.8852\n",
+      "\n",
+      "Epoch 15/19\n",
+      "----------\n",
+      "train Loss: 0.1030 Acc: 0.9723\n",
+      "val Loss: 0.4063 Acc: 0.8730\n",
+      "\n",
+      "Epoch 16/19\n",
+      "----------\n",
+      "train Loss: 0.1002 Acc: 0.9712\n",
+      "val Loss: 0.3969 Acc: 0.8779\n",
+      "\n",
+      "Epoch 17/19\n",
+      "----------\n",
+      "train Loss: 0.0878 Acc: 0.9770\n",
+      "val Loss: 0.3568 Acc: 0.8828\n",
+      "\n",
+      "Epoch 18/19\n",
+      "----------\n",
+      "train Loss: 0.0893 Acc: 0.9801\n",
+      "val Loss: 0.3807 Acc: 0.8852\n",
+      "\n",
+      "Epoch 19/19\n",
+      "----------\n",
+      "train Loss: 0.0667 Acc: 0.9827\n",
+      "val Loss: 0.3591 Acc: 0.8913\n",
+      "\n",
+      "Training complete in 142m 36s\n",
+      "Best val Acc: 0.891331\n"
      ]
     }
    ],
    "source": [
-    "modelType = 'vgg'\n",
-    "modelSize = '16'\n",
+    "modelType = 'resnet'\n",
+    "modelSize = '101'\n",
     "dataType = '512'\n",
     "figSize = '128'\n",
     "\n",
-    "model = autoTraining(modelType, modelSize, dataType, figSize, 10)"
+    "model = autoTraining(modelType, modelSize, dataType, figSize, 20)"
    ]
   },
   {
