--- a/Codigos/Análise de BCI/Análise Estatística.ipynb
+++ b/Codigos/Análise de BCI/Análise Estatística.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,45 +15,14 @@
     "\n",
     "import sys\n",
     "sys.path.append('Scripts')\n",
-    "from utils import getData"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "from utils import *\n",
+    "from NNCreationAux import *\n",
+    "from NNUtils import *\n",
+    "import numpy as np\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_size = 224\n",
-    "batch_size = 1\n",
-    "workers = 1\n",
-    "ngpu = 1\n",
-    "validation_split = 0\n",
-    "train_split = 0\n",
-    "shuffle_dataset = True\n",
-    "random_seed = 42\n",
-    "image_size = 224\n",
-    "device = torch.device(\"cuda:0\" if (torch.cuda.is_available() and ngpu > 0) else \"cpu\")\n",
-    "# device = \"cpu\"    "
    ]
   },
   {
@@ -64,7 +33,7 @@
    "source": [
     "folder = 'Test_GASF'\n",
     "figPath = 'C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\512'\n",
-    "dataloaders, dataset_sizes, dataloader, class_names = getData(figPath, image_size, train_split, validation_split, batch_size = batch_size)"
+    "dataloader, dataloaders, dataset_sizes, class_names = getData('512', folder)"
    ]
   },
   {
