--- a/Codigos/Análise de BCI/Análise Estatística.ipynb
+++ b/Codigos/Análise de BCI/Análise Estatística.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -27,73 +36,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder = 'Test_GASF'\n",
     "figPath = 'C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\512'\n",
-    "dataloader, dataloaders, dataset_sizes, class_names = getData('512', folder)"
+    "dataloader, dataloaders, dataset_sizes, class_names = getData('512', folder, batch_size = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class predictor(nn.Module):\n",
-    "    def __init__(self, model):\n",
-    "        super().__init__()\n",
-    "        self.model = model\n",
-    "        \n",
-    "    def predict(self, dataloader):\n",
-    "        outputs = []\n",
-    "        targets = []\n",
-    "        for sample, target in dataloader:\n",
-    "            o = torch.argmax(F.softmax(self.model(sample), dim = 1)).item()\n",
-    "            outputs.append(o)\n",
-    "            targets.append(target.item())\n",
-    "            \n",
-    "        outputs = np.array(outputs)\n",
-    "        targets = np.array(targets)\n",
-    "        right_pred = 1*(outputs == targets)\n",
-    "        return outputs, right_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "method = 'gadf'\n",
+    "method = 'gasf'\n",
     "path = 'Models\\\\'+method\n",
     "names = os.listdir(path)[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelPath = 'Models\\\\gasf\\\\resnet34\\\\cca128\\\\model.pth'\n",
+    "state_dict = torch.load(modelPath)\n",
+    "model = models.resnet34()\n",
+    "model.load_state_dict(state_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelDict = {\n",
-    "#     'resnet18': models.resnet18(),\n",
-    "#     'resnet34': models.resnet34(),\n",
-    "#     'resnet50': models.resnet50(),\n",
-    "#     'resnet101': models.resnet101(),\n",
-    "#     'resnet152': models.resnet152(),\n",
-    "#     'densenet121': models.densenet121(),\n",
-    "#     'densenet161': models.densenet161(),\n",
-    "#     'densenet169': models.densenet169(),\n",
-    "#     'densenet201': models.densenet201(),\n",
-    "#     'alexnet': models.alexnet(),\n",
-    "    'googlenet': models.googlenet(),\n",
-    "#     'vgg11': models.vgg11(),\n",
-    "#     'vgg13': models.vgg13(),\n",
-    "#     'vgg16': models.vgg16()\n",
-    "}"
+    "def predict(model, dataloader):\n",
+    "    outputs = []\n",
+    "    targets = []\n",
+    "\n",
+    "    with torch.set_grad_enabled(False):\n",
+    "        for sample, target in dataloader:\n",
+    "            o = torch.argmax(F.softmax(model.forward(sample), dim = 1)).item()\n",
+    "            outputs.append(o)\n",
+    "            targets.append(target.item())\n",
+    "\n",
+    "    outputs = np.array(outputs)\n",
+    "    targets = np.array(targets)\n",
+    "    right_pred = 1*(outputs == targets)\n",
+    "    return outputs, right_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out, right = predict(model, dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.286"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(right)/500"
    ]
   },
   {
